<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="todo">TODO</string>
    <string name="world_flag_quiz">World Flag Quiz</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="_20">20</string>
    <string name="_25">25</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="afganistan">Afganistan</string>
    <string name="turkmenistan">Turkmenistan</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="_1_15">1/15</string>
</resources>