<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".QuestionActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0A000000"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/number_of_questions"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights,UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="NestedWeights">

                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="80dp"
                        android:layout_margin="16dp"
                        card_view:cardBackgroundColor="@android:color/transparent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        app:cardCornerRadius="20dp">

                        <TextView
                            android:id="@+id/question10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_10"
                            android:textStyle="bold"
                            android:textSize="24sp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="80dp"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        card_view:cardBackgroundColor="@android:color/transparent"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        app:cardCornerRadius="20dp">

                        <TextView
                            android:id="@+id/question15"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_15"
                            android:textStyle="bold"
                            android:textSize="24sp"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="80dp"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        card_view:cardBackgroundColor="@android:color/transparent"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        app:cardCornerRadius="20dp">

                        <TextView
                            android:id="@+id/question20"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_20"
                            android:textStyle="bold"
                            android:textSize="24sp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="80dp"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        card_view:cardBackgroundColor="@android:color/transparent"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        app:cardCornerRadius="20dp">

                        <TextView
                            android:id="@+id/question25"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/_25"
                            android:textSize="24sp"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>





</RelativeLayout>