<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/numberQues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/imageFlag"
            android:layout_width="320dp"
            android:layout_height="240dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="NestedWeights">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="8dp"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/answer1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/uzbekistan"
                        android:textStyle="bold"
                        android:textSize="24sp"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/answer2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/afganistan"
                        android:textSize="24sp"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|center">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/answer3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/turkmenistan"
                        android:textSize="24sp"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_margin="16dp"
                    card_view:cardBackgroundColor="@android:color/transparent"

                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/answer4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/kazakhstan"
                        android:textStyle="bold"
                        android:textSize="24sp"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>